--- a/BookClub/appsettings.json
+++ b/BookClub/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookDbConnection": "UserID=postgres;Password=postgres;Server=localhost;Port=5432;Database=bookclub;IntegratedSecurity=true;Pooling=true;\""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
