--- a/BookClub/Properties/launchSettings.json
+++ b/BookClub/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56869",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:58027",
+      "sslPort": 44357
     }
   },
   "profiles": {
@@ -18,7 +18,7 @@
     "BookClub": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
