--- a/BookClub/appsettings.json
+++ b/BookClub/appsettings.json
@@ -1,13 +1,20 @@
 {
   "ConnectionStrings": {
-    "BookDbConnection": "UserID=postgres;Password=postgres;Server=localhost;Port=5432;Database=bookclub;IntegratedSecurity=true;Pooling=true;\""
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookClub-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-    "LogLevel": {
+      "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+  "IdentityServer": {
+    "Clients": {
+      "BookClub": {
+        "Profile": "IdentityServerSPA"
+      }
     }
   },
-  "AllowedHosts": "*"
+"AllowedHosts": "*"
 }
